--- a/SharpStore/content/home.html
+++ b/SharpStore/content/home.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Sharp Store</a>
+              <a class="navbar-brand" href="home">Sharp Store</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -87,7 +87,7 @@
             <div class="carousel-caption">
               <h1>Cut Fresh</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Our Products</a></p>
+              <p><a class="btn btn-lg btn-primary" href="products" role="button">Our Products</a></p>
             </div>
           </div>
         </div>
