--- a/SharpStore/content/products.html
+++ b/SharpStore/content/products.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Sharp Store</a>
+                    <a class="navbar-brand" href="home">Sharp Store</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
